--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Holidaze Hotel Booking"/>
+    <meta property="og:type" content="Booking"/>
+    <meta property="og:image" content="../src/images/logo/holidazelogo.png"/>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Holidaze Hotel Booking"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
